# dream-proxima

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md
assets/templates/: index.hbs  index.html  styles.hbs
assets/templates/pages/: index.hbs
assets/templates/pages/article/: read.hbs
assets/templates/pages/user/: info.hbs
assets/templates/partial/: header.hbs  scripts.hbs  styles.hbs
cmake/: cargo.cmake  multimarkdown.cmake  multimarkdown6.cmake  spdlog.cmake
codebuild/: buildspec.yml  deployspec.yml
common/: Cargo.toml
common/src/: lib.rs  main.rs  random.rs
doc/: build.md
docker/: Dockerfile
examples/: Cargo.toml  otp.rs
server/: Cargo.toml
server/src/: config.rs  handlers.rs  helpers.rs  layers.rs  main.rs  models.rs  utils.rs
server/src/graphql/: schema.rs  types.rs
server/src/graphql/mutation/: post.rs
server/src/graphql/query/: article.rs  mod.rs
server/src/handlers/: about.rs  article.rs  index.rs  user.rs
src/: config.rs  handlers.rs  layers.rs  main.rs  models.rs  utils.rs
src/graphql/: schema.rs  types.rs
src/graphql/mutation/: article.rs  post.rs  user.rs
src/graphql/query/: article.rs  mod.rs  post.rs  user.rs
src/handlers/: article.rs  index.rs  jwt.rs  sitemap.rs  user.rs
src/layers/: appconfig.rs
src/models/: article.rs  claims.rs  error.rs
src/utils/: article.rs
