[package]
name = "proxima"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.9", features = ["blocking"] }
handlebars = "4.2.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
axum = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.6"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.0"
tower = { version = "0.4.1", features = ["full"] }
tower-http = { version = "0.3.3", features = ["full"] }
clap = { version = "3.1.18", features = ["derive"] }