[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
libc = "0.2.119"
reqwest = { version = "0.11.9", features = ["blocking"] }
handlebars = "4.2.1"
serde_json = "1.0.79"
common = { path = "../common" }
axum = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio-postgres = "0.7.6"
bb8 = "0.8.0"
bb8-postgres = "0.8.0"
tracing = "0.1.34"